# SC---Teste-3

./: README.md  v5.1-pipeline-prefiltro-pagewindow
supercadernos_v5.0/: README.md  config.yaml  pyproject.toml
supercadernos_v5.0/prompts/: consolidator.jinja.md  extractor.jinja.md  synopsis.jinja.md
supercadernos_v5.0/src/supercadernos/: __init__.py  cache.py  cli.py  config.py  consolidate.py  extractor.py  indexer.py  llm.py  pdfio.py  report.py  synth.py  utils.py
supercadernos_v5.0/tests/: test_layout.py
